--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,7 @@ h1, h2, h3, p::first-letter {
   font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-#sharlotka, #sharlotkaPhoto {
+#sharlotka {
   background-color: rgba(45, 174, 216, 0.235);
   border-color:rgba(15, 50, 62, 0.406);
 }
@@ -39,11 +39,11 @@ h1, h2, h3, p::first-letter {
   text-decoration: underline dotted;
 }
 
-#sharlotka h2, #sharlotka h3, #sharlotka p::first-letter {
+#sharlotkaPhoto, #sharlotka h2, #sharlotka h3, #sharlotka p::first-letter {
   color: rgba(3, 41, 53, 0.755);
 }
 
-#tiramisu, #tiramisuPhoto {
+#tiramisu {
   background-color: rgba(169, 169, 169, 0.18);
   border-color: rgba(58, 58, 58, 0.762);
 }
@@ -53,11 +53,11 @@ h1, h2, h3, p::first-letter {
   text-decoration: underline dashed;
 }
 
-#tiramisu h2, #tiramisu h3, #tiramisu p::first-letter {
+#tiramisuPhoto, #tiramisu h2, #tiramisu h3, #tiramisu p::first-letter {
   color: rgba(58, 58, 58, 0.762);
 }
 
-#gingerbread, #gingerbreadPhoto {
+#gingerbread {
   background-color: rgba(143, 188, 143, 0.618);
   border-color: rgba(34, 74, 34, 0.831);
 }
@@ -67,7 +67,7 @@ h1, h2, h3, p::first-letter {
   text-decoration: underline wavy;
 }
 
-#gingerbread h2, #gingerbread h3, #gingerbread p::first-letter {
+#gingerbreadPhoto, #gingerbread h2, #gingerbread h3, #gingerbread p::first-letter {
   color: rgba(34, 74, 34, 0.831);
 }
 
